<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle2"
    android:fitsSystemWindows="true"
    android:orientation="vertical"



    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/menu_login"

        android:layout_width="413dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="608dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress"
                        android:textColor="#FFFFFF"

                        android:textColorHint="#80FFFFFF" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="#FFFFFF"

                        android:textColorHint="#80FFFFFF" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:textColor="#FFFFFF"

                        android:textColorHint="#80FFFFFF" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:hint="@string/contactnum"
                        android:inputType="phone"
                        android:textColor="#FFFFFF"

                        android:textColorHint="#80FFFFFF" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_tpid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:hint="@string/idpatient"
                        android:inputType="textEmailAddress"
                        android:textColor="#FFFFFF"

                        android:textColorHint="#80FFFFFF" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#FFFFFF"

                        android:textColorHint="#80FFFFFF" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/input_confirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:hint="@string/confirmpass"
                        android:inputType="textPassword"
                        android:textColor="#FFFFFF"

                        android:textColorHint="#80FFFFFF" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_secquestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:hint="@string/securityquestion1"
                        android:inputType="text"
                        android:textColor="#FFFFFF"

                        android:textColorHint="#80FFFFFF" />
                </android.support.design.widget.TextInputLayout>


                <EditText
                    android:id="@+id/txtInitialinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Initial Date Input:"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />




                <Button
                    android:id="@+id/btndateinitial"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn_reverse"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="@font/roboto"

                    android:text="Initial Date Input"
                    android:textColor="@color/colorWhite" />
                <EditText
                    android:id="@+id/txtfirstintake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="30sp"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/vesper_libre"
                    android:inputType="textPersonName"
                    android:text="@string/intakefirst"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnintakefirst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pick First Intake"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtsecintake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="30sp"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/vesper_libre"
                    android:inputType="textPersonName"
                    android:text="@string/intakesecond"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnintakesec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pick Second Intake"
                    android:textStyle="bold" />


                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnregister"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn_reverse"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/register"
                    android:text="Register"
                    android:textColor="@color/colorWhite" />



            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</FrameLayout>
